--- a/infra-templates/traefik/1/docker-compose.yml
+++ b/infra-templates/traefik/1/docker-compose.yml
@@ -1,34 +1,32 @@
-
 traefik:
   ports:
-  - ${admin_port}:${admin_port}/tcp
-  - ${http_port}:${http_port}/tcp
-  - ${https_port}:${https_port}/tcp
+  - ${admin_port}:8000/tcp
+  - ${http_port}:8080/tcp
+  - ${https_port}:8443/tcp
   log_driver: ''
   labels:
     io.rancher.scheduler.global: 'true'
-    io.rancher.scheduler.affinity:host_label: traefik_lb=true
+    io.rancher.scheduler.affinity:host_label: ${host_label}
     io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     io.rancher.sidekicks: traefik-conf
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.0.0-beta.771
+  image: rawmind/alpine-traefik:1.0.1-1
   environment:
-  - TRAEFIK_HTTP_PORT=${http_port}
-  - TRAEFIK_HTTPS_PORT=${https_port}
-  - TRAEFIK_ADMIN_PORT=${admin_port}
   - CONF_INTERVAL=${refresh_interval}
+  - TRAEFIK_HTTPS_ENABLE=${https_enable}
   volumes_from:
   - traefik-conf
 traefik-conf:
   log_driver: ''
   labels:
     io.rancher.scheduler.global: 'true'
-    io.rancher.scheduler.affinity:host_label: traefik_lb=true
+    io.rancher.scheduler.affinity:host_label: ${host_label}
     io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     io.rancher.container.start_once: 'true'
   tty: true
   log_opt: {}
-  image: rawmind/rancher-traefik:0.0.1-10
+  image: rawmind/rancher-traefik:0.3.4
   net: none
+
