--- a/infra-templates/traefik/1/rancher-compose.yml
+++ b/infra-templates/traefik/1/rancher-compose.yml
@@ -1,12 +1,18 @@
 .catalog:
-  name: Traefik
-  version: v1.0.0-beta.555-rancher1
+  name: traefik
+  version: v1.0.1-rancher1
   description: |
-    (Experimental) Traefik active load balancer.
+    (Experimental) Traefik load balancer.
   minimum_rancher_version: v0.59.0
   maintainer: "Raul Sanchez <rawmind@gmail.com>"
   uuid: traefik-0
   questions:
+    - variable: "host_label"
+      description: "Host label where to run traefik service."
+      label: "Host label:"
+      required: true
+      default: "traefik_lb=true" 
+      type: "string"
     - variable: "http_port"
       description: "Traefik http public port to listen."
       label: "Http port:"
@@ -25,25 +31,47 @@
       required: true
       default: 8000 
       type: "int"
+    - variable: "https_enable"
+      label: "Enable HTTPS:"
+      description: |
+        Enable https working mode. If you activate, you need to fill SSL key and SSL crt in order to work.
+      default: false
+      required: true
+      type: enum
+      options:
+        - false
+        - true
+        - only
+    - variable: "ssl_key"
+      description: "SSL key to secure the service"
+      label: "SSL key"
+      type: "multiline"
+      required: false
+      default: ""
+    - variable: "ssl_crt"
+      description: "SSL cert to secure the service"
+      label: "SSL crt"
+      type: "multiline"
+      required: false
+      default: ""
     - variable: "refresh_interval"
       description: "Interval to poll/apply configuration changes." 
       label: "Refresh Interval (s):"
       required: true
       default: 60 
       type: "int"
-    - variable: "ssl_cert"
-      description: "SSL certificate" 
-      label: "SSL certificate:"
-      required: false
-      default: ""
-      type: "certificate"
 traefik:
   retain_ip: true
-  default_cert: ${ssl_cert}
   health_check:
-    port: ${admin_port}
+    port: 8000
     interval: 5000
     unhealthy_threshold: 3
     request_line: 'GET /dashboard/# HTTP/1.0'
     healthy_threshold: 2
     response_timeout: 5000
+  metadata:
+    traefik:
+      ssl_key: |
+        ${ssl_key}
+      ssl_crt: |
+        ${ssl_crt}
