--- a/infra-templates/traefik/config.yml
+++ b/infra-templates/traefik/config.yml
@@ -1,9 +1,9 @@
 name: Traefik
 description: |
-  Traefik active load balancer
-version: v1.2.1-rancher1
+  Traefik active load balancer (USE)
+version: v1.5.1-rancher1
 category: Load Balancing
-maintainer: "Samuel Taylor <samtaylor.uk@gmail.com>"
-minimum_rancher_version: v1.5.0
+maintainer: "Raul Sanchez <rawmind@gmail.com>"
+minimum_rancher_version: v0.59.0
 license:
-projectURL:
+projectURL: https://github.com/rawmind0/alpine-traefik
